docs/7.52/md/abapdata_ranges.md
---
title: "DATA - RANGE OF"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_shortref.htm) Syntax DATA rtab TYPE RANGE OF typeLIKE RANGE OFdobj INITIAL SIZE n VALUE IS INITIAL(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm)
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_ranges.htm"
abapFile: "abapdata_ranges.htm"
keywords: ["select", "do", "if", "try", "class", "data", "types", "abapdata", "ranges"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Declarations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendeclarations.htm) →  [Declaration Statements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_declarations.htm) →  [Data Types and Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentypes_and_objects.htm) →  [Declaring Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenobjects_statements.htm) →  [DATA](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata.htm) → 

DATA - RANGE OF

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_shortref.htm)

Syntax

DATA rtab *{*TYPE RANGE OF type*}**|**{*LIKE RANGE OFdobj*}*
          *\[*INITIAL SIZE n*\]*
          [*\[*VALUE IS INITIAL*\]*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm)
          [*\[*READ-ONLY*\]*](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm).

Effect

This statement defines a [ranges table](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenranges_table_glosry.htm "Glossary Entry") rtab with the table type described in the section [TYPES - RANGE OF](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abaptypes_ranges.htm). The table type defined here, however, is not a standalone type, but exists as a property of the data object rtab.

The addition [VALUE IS INITIAL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_options.htm) can be used to specify an initial [start value](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstart_value_glosry.htm "Glossary Entry").

Notes

-   Outside of classes, the addition [WITH HEADER LINE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdata_header_line.htm) can also be used to declare an obsolete [header line](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenheader_line_glosry.htm "Glossary Entry").
    
-   Declarations of ranges tables using the statement [RANGES](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapranges.htm) are obsolete.
    

Example

In this example, a ranges table is declared, filled, and evaluated in the [WHERE](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapwhere.htm) condition of a [SELECT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapselect.htm) statement.

DATA carrid\_range TYPE RANGE OF spfli-carrid.
carrid\_range = VALUE #(
  ( sign = 'I' option = 'BT' low = 'AA' high = 'LH') ).
SELECT \*
       FROM spfli
       WHERE carrid IN @carrid\_range
       INTO TABLE @DATA(spfli\_tab).